--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 		/>
 		<title>Expense Tracker</title>
 	</head>
-	<body>
+	<body style='background-color:red'>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 	</body>
